Fixes #654